feat: v1.0.0 - Professional refactoring release
Complete repository structure with:
- Comprehensive documentation and examples
- Full test suite (~25 tests) with pytest
- GitHub Actions CI workflow (Python 3.10/3.11)
- Improved CLI with grouped help and doctor command
- Programmatic API (pipeline.run)
- Benchmarking infrastructure
- Enhanced error messages and diagnostics
- SLURM-compatible progress output

See CHANGELOG.md for details.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ runs/
 GITHUB*.md
 UPLOAD*.md
 README_GITHUB.md
+QUICK_TEST*.md
+QUICK_TEST*.sh
+REMOVE_DOCS*.md
+TEST_STATUS.md
+remove_internal_docs.sh
