config: update ruff lint configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ include = ["expoly*"]
 [tool.ruff]
 line-length = 100
 target-version = "py39"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
