--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ license = {text = "MIT"}
 dependencies = ["numpy","pandas","scipy","h5py", "ovito", "plotly"]
 
 [project.optional-dependencies]
-dev = ["pytest>=7.0","pytest-cov","ruff","mypy", "plotly", "matplotlib"]
+dev = ["pytest>=7.0","pytest-cov","ruff","black","mypy", "plotly", "matplotlib"]
 
 [project.scripts]
 expoly = "expoly.cli:main"
