polish: connected-components overlap removal + Parquet/npy I/O
- ovito_delete_overlap_data: graph + connected_components, one rep per cluster
- Overlap mask: default .npy, polish_pipeline reads .npy or CSV
- raw_points: CLI writes raw_points.parquet, _load_raw_points supports .parquet/.csv
- Id map: ids.parquet read/write with CSV fallback
- build_final_data_from_ovito_atoms: vectorized write, robust parse
- Add pyarrow dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 authors = [{name="Meizhong Lyu"}]
 license = {text = "MIT"}
-dependencies = ["numpy","pandas","scipy","h5py", "ovito", "plotly"]
+dependencies = ["numpy", "pandas", "scipy", "h5py", "ovito", "plotly", "pyarrow"]
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0","pytest-cov","ruff","black","mypy", "plotly", "matplotlib"]
