--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,31 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "expoly"
-version = "1.0.0"
+version = "1.1.0"
 description = "Voxel-to-atomistic conversion and LAMMPS pipeline tools (with legacy runners)"
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [{name="Meizhong Lyu"}]
 license = {text = "MIT"}
-dependencies = ["numpy", "pandas", "scipy", "h5py", "ovito", "plotly", "pyarrow"]
+dependencies = [
+    "numpy",
+    "pandas",
+    "scipy",
+    "h5py",
+    "ovito",
+    "plotly",
+    "pyarrow>=10.0.1",
+    "numexpr>=2.8.4",
+    "bottleneck>=1.3.6",
+    "scikit-learn",
+]
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0","pytest-cov","ruff","black","mypy", "plotly", "matplotlib"]
 
 [project.scripts]
 expoly = "expoly.cli:main"
+expoly-voronoi = "expoly.generate_voronoi:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
